--- a/MVC 1/src/main/resources/application.properties
+++ b/MVC 1/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port = 8081
 logging.level.org.apache.coyote.http11=debug
+
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=/.jsp
